# mp2-lab12

./: .travis.yml  CMakeLists.txt  README.md
gtest/: gtest-all.cc  gtest.h
test/: test_texts.cpp
texts/: main.cpp
textslib/: CMakeLists.txt  Queue.h  Separator.cpp  Separator.h  Stack.h  TTextFactory.cpp  TTextFactory.h  Text.cpp  Text.h  TextIterator.cpp  TextIterator.h  TextNode.cpp  TextNode.h
